处理阶段已通知，过滤掉已屏蔽的内容

--- a/fta_web/alert/test_utils.ipynb
+++ b/fta_web/alert/test_utils.ipynb
@@ -1,7 +1,12 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-29T11:27:33.911997Z",
+     "start_time": "2024-10-29T11:27:28.366230Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "import sys\n",
@@ -9,10 +14,24 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello\n",
     "from fta_web.alert.utils import process_stage_string\n",
+    "import re\n",
+    "\n",
     "\n",
     "queries = [\n",
     "    '处理阶段 : 已通知',\n",
+    "    '处理阶段: 已通知 OR 处理阶段: 已屏蔽',\n",
+    "    'NOT 处理阶段: 已通知',\n",
     "    '处理阶段 : 已确认 AND 状态 : 未恢复',\n",
+    "    '处理阶段 : 已通知 OR 处理阶段 : 已屏蔽 ',\n",
+    "    '处理阶段 : 已确认 AND 状态 : 未恢复 OR 处理阶段 : 已屏蔽 ',\n",
+    "    'NOT 处理阶段 : 已通知 OR -处理阶段 : 已屏蔽 ',\n",
+    "    '处理阶段 : 已确认 AND 状态 : 未恢复 OR -处理阶段 : 已屏蔽 ',\n",
+    "    '((处理阶段 : 已通知) AND 状态 : 未恢复)',\n",
+    "    '处理阶段 : 已通知 OR 状态 : 未恢复',\n",
+    "    'stage : 已通知 OR 状态 : 未恢复',\n",
+    "    '状态 : 未恢复 OR -处理阶段 : 已通知',\n",
+    "    '-处理阶段 : 已通知',\n",
+    "    'NOT 处理阶段 : 已通知',\n",
     "    '((处理阶段 : 已通知) AND 状态 : 未恢复)',\n",
     "    '处理阶段 : 已通知 OR 状态 : 未恢复',\n",
     "    'stage : 已通知 OR 状态 : 未恢复',\n",
@@ -22,20 +41,20 @@
     "    '处理阶段 : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复',\n",
     "    '处理阶段 : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND 处理阶段 : 已确认',\n",
     "    '指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" ADN (告警名称 : \"VMStorage内存使用率\")',\n",
-    "    '(((not处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"',\n",
+    "    '(((not 处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"',\n",
     "    '(((-处理阶段 : 已通知 )) AND 处理阶段 : 已流控) AND -指标ID : \"bk_log_search.index_set.53\"',\n",
-    "    '(((-处理阶段 : 已通知 )) OR  not处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not处理阶段 : 已流控',\n",
+    "    '(((-处理阶段 : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not 处理阶段 : 已流控',\n",
     "    '(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR  -目标IP : \"127.0.0.1\") OR 处理阶段 : 已通知',\n",
-    "    '((((-处理阶段 : 已通知 )) OR  not处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not处理阶段 : 已流控',\n",
+    "    '((((-处理阶段 : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not 处理阶段 : 已流控',\n",
     "    'stage : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复',\n",
     "    'stage : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND 处理阶段 : 已确认',\n",
     "    '指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" OR  (告警名称 : \"VMStorage内存使用率\")',\n",
-    "    '(((not处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"',\n",
+    "    '(((not 处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"',\n",
     "    '(((-stage: 已通知 )) AND 处理阶段 : 已流控) AND -指标ID : \"bk_log_search.index_set.53\"',\n",
-    "    '(((- stage  : 已通知 )) OR  not处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND notstage : 已流控',\n",
-    "    '(((-stage : 已通知 )) OR  not处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not stage : 已流控',\n",
+    "    '(((- stage  : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND notstage : 已流控',\n",
+    "    '(((-stage : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not stage : 已流控',\n",
     "    '(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR  -目标IP : \"127.0.0.1\") OR stage : 已通知',\n",
-    "    '((((-stage : 已通知 )) OR  not处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not处理阶段 : 已流控'\n",
+    "    '((((-stage : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not 处理阶段 : 已流控'\n",
     "]\n",
     "\n",
     "for query_string in queries:\n",
@@ -45,8 +64,134 @@
     "    print()\n"
    ],
    "id": "ce6bb359211c2b4c",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
+      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "处理阶段 : 已通知\n",
+      "(is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "处理阶段: 已通知 OR 处理阶段: 已屏蔽\n",
+      "(is_handled : true AND is_shielded : false) OR is_shielded : true\n",
+      "\n",
+      "NOT 处理阶段: 已通知\n",
+      "NOT (is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "处理阶段 : 已确认 AND 状态 : 未恢复\n",
+      "is_ack : true AND 状态 : 未恢复\n",
+      "\n",
+      "处理阶段 : 已通知 OR 处理阶段 : 已屏蔽 \n",
+      "(is_handled : true AND is_shielded : false) OR is_shielded : true\n",
+      "\n",
+      "处理阶段 : 已确认 AND 状态 : 未恢复 OR 处理阶段 : 已屏蔽 \n",
+      "is_ack : true AND 状态 : 未恢复 OR is_shielded : true\n",
+      "\n",
+      "NOT 处理阶段 : 已通知 OR -处理阶段 : 已屏蔽 \n",
+      "NOT (is_handled : true AND is_shielded : false) OR -is_shielded : true\n",
+      "\n",
+      "处理阶段 : 已确认 AND 状态 : 未恢复 OR -处理阶段 : 已屏蔽 \n",
+      "is_ack : true AND 状态 : 未恢复 OR -is_shielded : true\n",
+      "\n",
+      "((处理阶段 : 已通知) AND 状态 : 未恢复)\n",
+      "(((is_handled : true AND is_shielded : false) ) AND 状态 : 未恢复)\n",
+      "\n",
+      "处理阶段 : 已通知 OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) OR 状态 : 未恢复\n",
+      "\n",
+      "stage : 已通知 OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) OR 状态 : 未恢复\n",
+      "\n",
+      "状态 : 未恢复 OR -处理阶段 : 已通知\n",
+      "状态 : 未恢复 OR -(is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "-处理阶段 : 已通知\n",
+      "-(is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "NOT 处理阶段 : 已通知\n",
+      "NOT (is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "((处理阶段 : 已通知) AND 状态 : 未恢复)\n",
+      "(((is_handled : true AND is_shielded : false) ) AND 状态 : 未恢复)\n",
+      "\n",
+      "处理阶段 : 已通知 OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) OR 状态 : 未恢复\n",
+      "\n",
+      "stage : 已通知 OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) OR 状态 : 未恢复\n",
+      "\n",
+      "状态 : 未恢复 OR -处理阶段 : 已通知\n",
+      "状态 : 未恢复 OR -(is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "-处理阶段 : 已通知\n",
+      "-(is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "NOT 处理阶段 : 已通知\n",
+      "NOT (is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "处理阶段 : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复\n",
+      "\n",
+      "处理阶段 : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND 处理阶段 : 已确认\n",
+      "(is_handled : true AND is_shielded : false) AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND is_ack : true\n",
+      "\n",
+      "指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" ADN (告警名称 : \"VMStorage内存使用率\")\n",
+      "指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" ADN (告警名称 : \"VMStorage内存使用率\")\n",
+      "\n",
+      "(((not 处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "(((not (is_handled : true AND is_shielded : false) )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "\n",
+      "(((-处理阶段 : 已通知 )) AND 处理阶段 : 已流控) AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "(((-(is_handled : true AND is_shielded : false) )) AND is_blocked : true ) AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "\n",
+      "(((-处理阶段 : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not 处理阶段 : 已流控\n",
+      "(((-(is_handled : true AND is_shielded : false) )) OR not is_shielded : true ) AND -指标ID : \"bk_log_search.index_set.53\" AND not is_blocked : true\n",
+      "\n",
+      "(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR  -目标IP : \"127.0.0.1\") OR 处理阶段 : 已通知\n",
+      "(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR -目标IP : \"127.0.0.1\") OR (is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "((((-处理阶段 : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not 处理阶段 : 已流控\n",
+      "((((-(is_handled : true AND is_shielded : false) )) OR not is_shielded : true ) AND -指标ID : \"bk_log_search.index_set.53\") AND not is_blocked : true\n",
+      "\n",
+      "stage : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复\n",
+      "(is_handled : true AND is_shielded : false) AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复\n",
+      "\n",
+      "stage : 已通知 AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND 处理阶段 : 已确认\n",
+      "(is_handled : true AND is_shielded : false) AND 告警名称 : \"VMStorage内存使用率\" OR 状态 : 未恢复 AND is_ack : true\n",
+      "\n",
+      "指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" OR  (告警名称 : \"VMStorage内存使用率\")\n",
+      "指标ID : \"bk_monitor..process_resident_memory_anon_bytes\" OR (告警名称 : \"VMStorage内存使用率\")\n",
+      "\n",
+      "(((not 处理阶段 : 已通知 )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "(((not (is_handled : true AND is_shielded : false) )) OR 告警名称 : \"cmdb的日志包含MUST_SEND_ALARM\") AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "\n",
+      "(((-stage: 已通知 )) AND 处理阶段 : 已流控) AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "(((-(is_handled : true AND is_shielded : false) )) AND is_blocked : true ) AND -指标ID : \"bk_log_search.index_set.53\"\n",
+      "\n",
+      "(((- stage  : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND notstage : 已流控\n",
+      "(((- (is_handled : true AND is_shielded : false) )) OR not is_shielded : true ) AND -指标ID : \"bk_log_search.index_set.53\" AND notis_blocked : true\n",
+      "\n",
+      "(((-stage : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\" AND not stage : 已流控\n",
+      "(((-(is_handled : true AND is_shielded : false) )) OR not is_shielded : true ) AND -指标ID : \"bk_log_search.index_set.53\" AND not is_blocked : true\n",
+      "\n",
+      "(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR  -目标IP : \"127.0.0.1\") OR stage : 已通知\n",
+      "(((状态 : 已恢复 ) AND 告警名称 : \"磁盘I/O使用率\") OR -目标IP : \"127.0.0.1\") OR (is_handled : true AND is_shielded : false)\n",
+      "\n",
+      "((((-stage : 已通知 )) OR  not 处理阶段 : 已屏蔽) AND -指标ID : \"bk_log_search.index_set.53\") AND not 处理阶段 : 已流控\n",
+      "((((-(is_handled : true AND is_shielded : false) )) OR not is_shielded : true ) AND -指标ID : \"bk_log_search.index_set.53\") AND not is_blocked : true\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
