屏蔽增加label字段&支持模糊查询

--- a/management/commands/run_cmd/test_parse_histogram_quantile_strategy.ipynb
+++ b/management/commands/run_cmd/test_parse_histogram_quantile_strategy.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-03T02:29:34.502490Z",
+     "start_time": "2024-12-03T02:29:29.965612Z"
+    }
    },
    "source": [
     "import sys\n",
@@ -12,14 +16,23 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
+      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T11:31:38.732730Z",
-     "start_time": "2024-11-28T11:31:38.718730Z"
+     "end_time": "2024-12-03T02:29:34.517480Z",
+     "start_time": "2024-12-03T02:29:34.505489Z"
     }
    },
    "cell_type": "code",
@@ -106,8 +119,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-28T11:31:48.547766Z",
-     "start_time": "2024-11-28T11:31:38.733731Z"
+     "end_time": "2024-12-03T02:29:45.286376Z",
+     "start_time": "2024-12-03T02:29:34.518481Z"
     }
    },
    "cell_type": "code",
@@ -204,15 +217,15 @@
       "总共的策略数量 36\n",
       "\n",
       "业务id、业务名、策略id、策略名:\n",
-      "39、<Business: 39-[39]审计中心 (业务)>、730、test_strategy_1\n",
-      "41、<Business: 41-[41]qwes (业务)>、731、test_strategy_2\n",
-      "34、<Business: 34-[34]aaaaa (业务)>、732、test_strategy_3\n",
-      "3、<Business: 3-[3]测试业务 (业务)>、733、test_strategy_4\n",
-      "35、<Business: 35-[35]cd-test (业务)>、734、test_strategy_5\n",
-      "4、<Business: 4-[4]DBA (业务)>、735、test_strategy_6\n",
-      "40、<Business: 40-[40]heroge-test (业务)>、736、test_strategy_7\n",
-      "2、<Business: 2-[2]蓝鲸 (业务)>、737、test_strategy_8\n",
-      "4、<Business: 4-[4]DBA (业务)>、738、test_strategy_9\n"
+      "2、<Business: 2-[2]蓝鲸 (业务)>、856、test_strategy_1\n",
+      "36、<Business: 36-[36]CODE-XYZ (业务)>、857、test_strategy_2\n",
+      "5、<Business: 5-[5]节点管理测试业务员 (业务)>、858、test_strategy_3\n",
+      "2、<Business: 2-[2]蓝鲸 (业务)>、859、test_strategy_4\n",
+      "39、<Business: 39-[39]审计中心 (业务)>、860、test_strategy_5\n",
+      "43、<Business: 43-[43]test-2024 (业务)>、861、test_strategy_6\n",
+      "39、<Business: 39-[39]审计中心 (业务)>、862、test_strategy_7\n",
+      "36、<Business: 36-[36]CODE-XYZ (业务)>、863、test_strategy_8\n",
+      "5、<Business: 5-[5]节点管理测试业务员 (业务)>、864、test_strategy_9\n"
      ]
     }
    ],
