--- a/management/commands/run_cmd/test_parse_target_dimension_strategy.ipynb
+++ b/management/commands/run_cmd/test_parse_target_dimension_strategy.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-02T11:11:16.136029Z",
-     "start_time": "2024-12-02T11:11:11.685432Z"
+     "end_time": "2024-12-03T02:06:05.304799Z",
+     "start_time": "2024-12-03T02:06:00.795709Z"
     }
    },
    "source": [
@@ -31,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T11:11:30.282368Z",
-     "start_time": "2024-12-02T11:11:30.260366Z"
+     "end_time": "2024-12-03T01:52:02.373524Z",
+     "start_time": "2024-12-03T01:52:02.357555Z"
     }
    },
    "cell_type": "code",
@@ -41,7 +41,7 @@
     "    \"type\": \"monitor\",\n",
     "    \"bk_biz_id\": 2,\n",
     "    \"scenario\": \"os\",\n",
-    "    \"name\": \"test_14\",\n",
+    "    \"name\": \"test_15\",\n",
     "    \"labels\": [],\n",
     "    \"is_enabled\": True,\n",
     "    \"priority\": None,\n",
@@ -97,7 +97,26 @@
     "                    \"time_field\": \"time\",\n",
     "                    \"bkmonitor_strategy_id\": \"in_use\",\n",
     "                    \"alert_name\": \"in_use\"\n",
+    "                },\n",
+    "                {\n",
+    "                    \"data_source_label\": \"bk_monitor\",\n",
+    "                    \"data_type_label\": \"time_series\",\n",
+    "                    # 它的值有四种： time_series： 指标数据, event: 事件数据，alert: 关联告警，log: 日志数据,trace: 场景智能检测\n",
+    "                    \"alias\": \"a\",\n",
+    "                    \"functions\": [],\n",
+    "                    \"result_table_id\": \"system.disk\",\n",
+    "                    \"agg_method\": \"AVG\",  # 数据聚合的方式\n",
+    "                    \"agg_interval\": 60,  # 数据采集的时间间隔\n",
+    "                    \"agg_dimension\": [  # 维度\n",
+    "                        \"bk_target_ip\",  # 目标ip\n",
+    "                        \"bk_target_cloud_id\",\n",
+    "                        \"mount_point\"\n",
+    "                    ],\n",
+    "                    \"agg_condition\": [],  # 条件 \n",
+    "                    \"metric_field\": \"in_use\",\n",
+    "                    \"unit\": \"percent\"  # 单位，百分比\n",
     "                }\n",
+    "\n",
     "            ],\n",
     "            \"algorithms\": [\n",
     "                {\n",
@@ -245,14 +264,19 @@
    ],
    "id": "5afb1cfc8ecc439a",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-03T01:52:08.257320Z",
+     "start_time": "2024-12-03T01:52:08.196292Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "from bkmonitor.strategy.new_strategy import Strategy\n",
-    "from bkmonitor.models.strategy import StrategyModel, ItemModel, DetectModel, AlgorithmModel\n",
+    "from bkmonitor.models.strategy import StrategyModel, ItemModel, DetectModel, AlgorithmModel, QueryConfigModel\n",
     "from mock import MagicMock\n",
     "\n",
     "strategy = Strategy(**new_strategy)\n",
@@ -260,12 +284,31 @@
     "strategy.access_aiops = MagicMock(return_value=True)\n",
     "strategy.save()\n",
     "\n",
-    "instance = StrategyModel.objects.get(id=strategy.id)\n",
-    "print(instance.__dict__)\n"
+    "query_config = QueryConfigModel.objects.filter(strategy_id=strategy.id)\n",
+    "for q in query_config:\n",
+    "    print(q.__dict__)\n",
+    "\n"
    ],
    "id": "4c0d4369bd3b4746",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_state': <django.db.models.base.ModelState object at 0x00000205C703F6D0>, 'id': 788, 'strategy_id': 783, 'item_id': 783, 'alias': 'a', 'data_source_label': 'bk_monitor', 'data_type_label': 'time_series', 'metric_id': 'bk_monitor.system.disk.in_use', 'config': {'unit': 'percent', 'functions': [], 'agg_method': 'AVG', 'agg_interval': 60, 'metric_field': 'in_use', 'agg_condition': [], 'agg_dimension': [], 'result_table_id': 'system.disk'}}\n",
+      "{'_state': <django.db.models.base.ModelState object at 0x00000205C703F6A0>, 'id': 789, 'strategy_id': 783, 'item_id': 783, 'alias': 'a', 'data_source_label': 'bk_monitor', 'data_type_label': 'time_series', 'metric_id': 'bk_monitor.system.disk.in_use', 'config': {'unit': 'percent', 'functions': [], 'agg_method': 'AVG', 'agg_interval': 60, 'metric_field': 'in_use', 'agg_condition': [], 'agg_dimension': ['bk_target_ip', 'bk_target_cloud_id', 'mount_point'], 'result_table_id': 'system.disk'}}\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [],
-   "execution_count": null
+   "execution_count": null,
+   "source": "",
+   "id": "110f27b7bce2a58f"
   },
   {
    "metadata": {},
@@ -278,8 +321,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-02T11:11:35.551395Z",
-     "start_time": "2024-12-02T11:11:35.506730Z"
+     "end_time": "2024-12-03T02:06:09.816658Z",
+     "start_time": "2024-12-03T02:06:09.786119Z"
     }
    },
    "cell_type": "code",
@@ -304,7 +347,7 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 3
   }
  ],
  "metadata": {
