排查策略关联的通知组在业务下不存在的策略

--- a/shield/resources/fronted_resources/test_shield_label_field.ipynb
+++ b/shield/resources/fronted_resources/test_shield_label_field.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-04T09:56:07.189991Z",
-     "start_time": "2024-12-04T09:56:02.504783Z"
+     "end_time": "2024-12-04T11:05:17.379883Z",
+     "start_time": "2024-12-04T11:05:11.974801Z"
     }
    },
    "source": [
@@ -31,8 +31,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T09:56:07.205992Z",
-     "start_time": "2024-12-04T09:56:07.191991Z"
+     "end_time": "2024-12-04T11:05:24.981669Z",
+     "start_time": "2024-12-04T11:05:24.968673Z"
     }
    },
    "cell_type": "code",
@@ -76,7 +76,7 @@
    ],
    "id": "77eba359162e370d",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -160,8 +160,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T09:56:07.349365Z",
-     "start_time": "2024-12-04T09:56:07.320401Z"
+     "end_time": "2024-12-04T11:05:33.809402Z",
+     "start_time": "2024-12-04T11:05:33.656984Z"
     }
    },
    "cell_type": "code",
@@ -190,6 +190,12 @@
     "    model = Shield.objects.get(id=model.id)\n",
     "\n",
     "    assert model.label == \"测试test_edit_shield_resource_2\"\n",
+    "    \n",
+    "    shield[\"label\"]=\"\"\n",
+    "    resource.shield.edit_shield(shield)\n",
+    "    model = Shield.objects.get(id=model.id)\n",
+    "\n",
+    "    assert model.label == \"\"\n",
     "\n",
     "\n",
     "test_edit_shield_resource()\n",
@@ -201,12 +207,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "测试test_edit_shield_resource 344\n",
+      "测试test_edit_shield_resource 360\n",
       "测试test_edit_shield_resource_2\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "cd29428ce3236eee"
   },
   {
    "metadata": {
