优化parse_usergroup_not_under_business代码逻辑

--- a/management/commands/run_cmd/test_parse_usergroup_not_under_business.ipynb
+++ b/management/commands/run_cmd/test_parse_usergroup_not_under_business.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-23T08:17:15.563541Z",
+     "start_time": "2024-12-23T08:17:10.909636Z"
+    }
    },
    "source": [
     "import sys\n",
@@ -12,8 +16,17 @@
     "sys.path.append('D:\\PythonProjects\\\\bk-monitor\\\\venv2\\share\\scripts')\n",
     "import hello"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境缺少部分需要的环境变量，可能导致项目运行报错，请确认以下环境变量已经配置并赋值: BK_PAAS2_URL\n",
+      "注意，当前版本为社区版环境，请确认 BKPAAS_MAJOR_VERSION 已经配置并正确赋值\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -30,7 +43,9 @@
     "替换功能可以通过一个配置项（是否预览）开启。\n",
     "开启预览，则仅打印信息不替换。 不开启预览，则替换+打印信息。\n",
     "\n",
-    "策略id， 策略名称， 业务id， 关联的通知组id+对应的业务id，本业务下相同名称的通知组id\n",
+    "策略id， 策略名称， 业务id， 关联的通知组id+对应的业务id，本业务下相同名称的通知组id \n",
+    "\n",
+    "关联的通知组，需要的是非当前业务下的告警组。\n",
     "\"\"\""
    ],
    "id": "a71fa243769acca8",
@@ -38,16 +53,12 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-17T03:07:56.320234Z",
-     "start_time": "2024-12-17T03:07:55.965165Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from bkmonitor.models.strategy import StrategyModel, UserGroup\n",
     "from bkmonitor.models.fta.action import StrategyActionConfigRelation\n",
+    "from collections import defaultdict\n",
     "from pprint import pprint\n",
     "\n",
     "\n",
@@ -108,136 +119,41 @@
     "    # 打印关联信息\n",
     "    query_set = StrategyActionConfigRelation.objects.all().values(\"id\", \"strategy_id\", \"user_groups\")\n",
     "    for item in query_set:\n",
-    "        user_groups = UserGroup.objects.filter(id__in=item[\"user_groups\"]).values(\"id\", \"bk_biz_id\")\n",
+    "        user_groups = UserGroup.objects.filter(id__in=item[\"user_groups\"]).values(\"id\", \"name\", \"bk_biz_id\")\n",
     "        strategy = StrategyModel.objects.get(id=item[\"strategy_id\"])\n",
     "        item[\"user_groups_info\"] = user_groups\n",
     "        item[\"strategy_name\"] = strategy.name\n",
     "        pprint(item)\n",
     "\n",
     "\n",
+    "def show_strategy_action_config():\n",
+    "    # 打印关联信息\n",
+    "    query_set = StrategyActionConfigRelation.objects.all().values(\"id\", \"strategy_id\", \"user_groups\")\n",
+    "    for item in query_set:\n",
+    "        user_groups = UserGroup.objects.filter(id__in=item[\"user_groups\"]).values(\"id\", \"name\", \"bk_biz_id\")\n",
+    "        strategy = StrategyModel.objects.get(id=item[\"strategy_id\"])\n",
+    "        item[\"user_groups_info\"] = user_groups\n",
+    "        item[\"strategy_name\"] = strategy.name\n",
+    "        pprint(item)\n",
+    "\n",
+    "\n",
+    "# show_strategy_action_config()\n",
     "create_strategy_action_config()"
    ],
    "id": "edb2e8bb2905b81c",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'id': 1243,\n",
-      " 'strategy_id': 1253,\n",
-      " 'strategy_name': 'test_stragety_1',\n",
-      " 'user_groups': [508, 509],\n",
-      " 'user_groups_info': <QuerySet [{'id': 509, 'bk_biz_id': 2}, {'id': 508, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1244,\n",
-      " 'strategy_id': 1254,\n",
-      " 'strategy_name': 'test_stragety_2',\n",
-      " 'user_groups': [509, 510],\n",
-      " 'user_groups_info': <QuerySet [{'id': 510, 'bk_biz_id': 2}, {'id': 509, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1245,\n",
-      " 'strategy_id': 1255,\n",
-      " 'strategy_name': 'test_stragety_3',\n",
-      " 'user_groups': [510, 511],\n",
-      " 'user_groups_info': <QuerySet [{'id': 511, 'bk_biz_id': 2}, {'id': 510, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1246,\n",
-      " 'strategy_id': 1256,\n",
-      " 'strategy_name': 'test_stragety_4',\n",
-      " 'user_groups': [511, 512],\n",
-      " 'user_groups_info': <QuerySet [{'id': 512, 'bk_biz_id': 2}, {'id': 511, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1247,\n",
-      " 'strategy_id': 1257,\n",
-      " 'strategy_name': 'test_stragety_5',\n",
-      " 'user_groups': [512, 513],\n",
-      " 'user_groups_info': <QuerySet [{'id': 513, 'bk_biz_id': 2}, {'id': 512, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1248,\n",
-      " 'strategy_id': 1258,\n",
-      " 'strategy_name': 'test_stragety_6',\n",
-      " 'user_groups': [513, 514],\n",
-      " 'user_groups_info': <QuerySet [{'id': 514, 'bk_biz_id': 2}, {'id': 513, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1249,\n",
-      " 'strategy_id': 1259,\n",
-      " 'strategy_name': 'test_stragety_7',\n",
-      " 'user_groups': [514, 515],\n",
-      " 'user_groups_info': <QuerySet [{'id': 515, 'bk_biz_id': 2}, {'id': 514, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1250,\n",
-      " 'strategy_id': 1260,\n",
-      " 'strategy_name': 'test_stragety_8',\n",
-      " 'user_groups': [515, 516],\n",
-      " 'user_groups_info': <QuerySet [{'id': 516, 'bk_biz_id': 2}, {'id': 515, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1251,\n",
-      " 'strategy_id': 1261,\n",
-      " 'strategy_name': 'test_stragety_9',\n",
-      " 'user_groups': [516, 517],\n",
-      " 'user_groups_info': <QuerySet [{'id': 517, 'bk_biz_id': 2}, {'id': 516, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1252,\n",
-      " 'strategy_id': 1262,\n",
-      " 'strategy_name': 'test_stragety_10',\n",
-      " 'user_groups': [517, 518],\n",
-      " 'user_groups_info': <QuerySet [{'id': 518, 'bk_biz_id': 6}, {'id': 517, 'bk_biz_id': 2}]>}\n",
-      "{'id': 1253,\n",
-      " 'strategy_id': 1263,\n",
-      " 'strategy_name': 'test_stragety_11',\n",
-      " 'user_groups': [518, 519],\n",
-      " 'user_groups_info': <QuerySet [{'id': 519, 'bk_biz_id': 6}, {'id': 518, 'bk_biz_id': 6}]>}\n",
-      "{'id': 1254,\n",
-      " 'strategy_id': 1264,\n",
-      " 'strategy_name': 'test_stragety_12',\n",
-      " 'user_groups': [519, 520],\n",
-      " 'user_groups_info': <QuerySet [{'id': 520, 'bk_biz_id': 6}, {'id': 519, 'bk_biz_id': 6}]>}\n",
-      "{'id': 1255,\n",
-      " 'strategy_id': 1265,\n",
-      " 'strategy_name': 'test_stragety_13',\n",
-      " 'user_groups': [520, 521],\n",
-      " 'user_groups_info': <QuerySet [{'id': 521, 'bk_biz_id': 6}, {'id': 520, 'bk_biz_id': 6}]>}\n",
-      "{'id': 1256,\n",
-      " 'strategy_id': 1266,\n",
-      " 'strategy_name': 'test_stragety_14',\n",
-      " 'user_groups': [521, 522],\n",
-      " 'user_groups_info': <QuerySet [{'id': 522, 'bk_biz_id': 6}, {'id': 521, 'bk_biz_id': 6}]>}\n",
-      "{'id': 1257,\n",
-      " 'strategy_id': 1267,\n",
-      " 'strategy_name': 'test_stragety_15',\n",
-      " 'user_groups': [522, 523],\n",
-      " 'user_groups_info': <QuerySet [{'id': 523, 'bk_biz_id': 5}, {'id': 522, 'bk_biz_id': 6}]>}\n",
-      "{'id': 1258,\n",
-      " 'strategy_id': 1268,\n",
-      " 'strategy_name': 'test_stragety_16',\n",
-      " 'user_groups': [523, 524],\n",
-      " 'user_groups_info': <QuerySet [{'id': 524, 'bk_biz_id': 5}, {'id': 523, 'bk_biz_id': 5}]>}\n",
-      "{'id': 1259,\n",
-      " 'strategy_id': 1269,\n",
-      " 'strategy_name': 'test_stragety_17',\n",
-      " 'user_groups': [524, 525],\n",
-      " 'user_groups_info': <QuerySet [{'id': 525, 'bk_biz_id': 5}, {'id': 524, 'bk_biz_id': 5}]>}\n",
-      "{'id': 1260,\n",
-      " 'strategy_id': 1270,\n",
-      " 'strategy_name': 'test_stragety_18',\n",
-      " 'user_groups': [525, 526],\n",
-      " 'user_groups_info': <QuerySet [{'id': 526, 'bk_biz_id': 5}, {'id': 525, 'bk_biz_id': 5}]>}\n",
-      "{'id': 1261,\n",
-      " 'strategy_id': 1271,\n",
-      " 'strategy_name': 'test_stragety_19',\n",
-      " 'user_groups': [526, 527],\n",
-      " 'user_groups_info': <QuerySet [{'id': 527, 'bk_biz_id': 5}, {'id': 526, 'bk_biz_id': 5}]>}\n",
-      "{'id': 1262,\n",
-      " 'strategy_id': 1272,\n",
-      " 'strategy_name': 'test_stragety_20',\n",
-      " 'user_groups': [527],\n",
-      " 'user_groups_info': <QuerySet [{'id': 527, 'bk_biz_id': 5}]>}\n"
-     ]
-    }
-   ],
-   "execution_count": 146
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T07:21:25.025724Z",
-     "start_time": "2024-12-17T07:21:24.948718Z"
+     "end_time": "2024-12-23T08:23:36.946386Z",
+     "start_time": "2024-12-23T08:23:36.915976Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from bkmonitor.management.commands.run_cmd import parse_usergroup_not_under_business\n",
+    "from bkmonitor.management.commands.run_cmd import parse_usergroup_not_under_business \n",
     "\n",
     "parse_usergroup_not_under_business(True)"
    ],
@@ -247,54 +163,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "策略id，策略名称，业务id，关联的通知组id列表，对应的业务id列表，本业务下相同名称的通知组id字典\n",
-      "1262,test_stragety_10,2,[517 518],[2 6],{'test_user_group_1': [513, 508]}\n",
-      "1263,test_stragety_11,2,[518 519],[6],{'test_user_group_1': [513, 508], 'test_user_group_2': [514, 509]}\n",
-      "1264,test_stragety_12,2,[519 520],[6],{'test_user_group_2': [514, 509], 'test_user_group_3': [515, 510]}\n",
-      "1265,test_stragety_13,2,[520 521],[6],{'test_user_group_4': [516, 511], 'test_user_group_3': [515, 510]}\n",
-      "1266,test_stragety_14,2,[521 522],[6],{'test_user_group_4': [516, 511], 'test_user_group_5': [517, 512]}\n",
-      "1267,test_stragety_15,2,[522 523],[5 6],{'test_user_group_5': [517, 512], 'test_user_group_1': [513, 508]}\n",
-      "1268,test_stragety_16,2,[523 524],[5],{'test_user_group_1': [513, 508], 'test_user_group_2': [514, 509]}\n",
-      "1269,test_stragety_17,2,[524 525],[5],{'test_user_group_2': [514, 509], 'test_user_group_3': [515, 510]}\n",
-      "1270,test_stragety_18,2,[525 526],[5],{'test_user_group_4': [516, 511], 'test_user_group_3': [515, 510]}\n",
-      "1271,test_stragety_19,2,[526 527],[5],{'test_user_group_4': [516, 511], 'test_user_group_5': [517, 512]}\n",
-      "1272,test_stragety_20,2,[527],[5],{'test_user_group_5': [517, 512]}\n"
+      "策略id，策略名称，业务id，关联的非本业务的告警组信息，本业务下相同名称的告警组ID\n",
+      "1744,test_stragety_10,2,{'id': 999, 'name': 'test_user_group_1', 'bk_biz_id': 6},[994, 989]\n",
+      "1745,test_stragety_11,2,{'id': 999, 'name': 'test_user_group_1', 'bk_biz_id': 6},[994, 989]\n",
+      "1745,test_stragety_11,2,{'id': 1000, 'name': 'test_user_group_2', 'bk_biz_id': 6},[995, 990]\n",
+      "1746,test_stragety_12,2,{'id': 1000, 'name': 'test_user_group_2', 'bk_biz_id': 6},[995, 990]\n",
+      "1746,test_stragety_12,2,{'id': 1001, 'name': 'test_user_group_3', 'bk_biz_id': 6},[996, 991]\n",
+      "1747,test_stragety_13,2,{'id': 1001, 'name': 'test_user_group_3', 'bk_biz_id': 6},[996, 991]\n",
+      "1747,test_stragety_13,2,{'id': 1002, 'name': 'test_user_group_4', 'bk_biz_id': 6},[997, 992]\n",
+      "1748,test_stragety_14,2,{'id': 1002, 'name': 'test_user_group_4', 'bk_biz_id': 6},[997, 992]\n",
+      "1748,test_stragety_14,2,{'id': 1003, 'name': 'test_user_group_5', 'bk_biz_id': 6},[998, 993]\n",
+      "1749,test_stragety_15,2,{'id': 1003, 'name': 'test_user_group_5', 'bk_biz_id': 6},[998, 993]\n",
+      "1749,test_stragety_15,2,{'id': 1004, 'name': 'test_user_group_1', 'bk_biz_id': 5},[994, 989]\n",
+      "1750,test_stragety_16,2,{'id': 1004, 'name': 'test_user_group_1', 'bk_biz_id': 5},[994, 989]\n",
+      "1750,test_stragety_16,2,{'id': 1005, 'name': 'test_user_group_2', 'bk_biz_id': 5},[995, 990]\n",
+      "1751,test_stragety_17,2,{'id': 1005, 'name': 'test_user_group_2', 'bk_biz_id': 5},[995, 990]\n",
+      "1751,test_stragety_17,2,{'id': 1006, 'name': 'test_user_group_3', 'bk_biz_id': 5},[996, 991]\n",
+      "1752,test_stragety_18,2,{'id': 1006, 'name': 'test_user_group_3', 'bk_biz_id': 5},[996, 991]\n",
+      "1752,test_stragety_18,2,{'id': 1007, 'name': 'test_user_group_4', 'bk_biz_id': 5},[997, 992]\n",
+      "1753,test_stragety_19,2,{'id': 1007, 'name': 'test_user_group_4', 'bk_biz_id': 5},[997, 992]\n",
+      "1753,test_stragety_19,2,{'id': 1008, 'name': 'test_user_group_5', 'bk_biz_id': 5},[998, 993]\n",
+      "1754,test_stragety_20,2,{'id': 1008, 'name': 'test_user_group_5', 'bk_biz_id': 5},[998, 993]\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T07:21:36.352134Z",
-     "start_time": "2024-12-17T07:21:36.279945Z"
+     "end_time": "2024-12-23T08:23:39.761732Z",
+     "start_time": "2024-12-23T08:23:39.713402Z"
     }
    },
    "cell_type": "code",
    "source": "parse_usergroup_not_under_business(False)",
-   "id": "4de8a2c1dfba9826",
+   "id": "f4fa4c356d4c02fb",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "策略id，策略名称，业务id，相同名称的告警组id列表，对应的业务id列表，本业务下相同名称的通知组id字典\n",
-      "1262,test_stragety_10,2,[513 508] [2],{'test_user_group_1': [513, 508]}\n",
-      "1263,test_stragety_11,2,[513 508 514 509] [2],{'test_user_group_1': [513, 508], 'test_user_group_2': [514, 509]}\n",
-      "1264,test_stragety_12,2,[514 509 515 510] [2],{'test_user_group_2': [514, 509], 'test_user_group_3': [515, 510]}\n",
-      "1265,test_stragety_13,2,[516 511 515 510] [2],{'test_user_group_4': [516, 511], 'test_user_group_3': [515, 510]}\n",
-      "1266,test_stragety_14,2,[516 511 517 512] [2],{'test_user_group_4': [516, 511], 'test_user_group_5': [517, 512]}\n",
-      "1267,test_stragety_15,2,[517 512 513 508] [2],{'test_user_group_5': [517, 512], 'test_user_group_1': [513, 508]}\n",
-      "1268,test_stragety_16,2,[513 508 514 509] [2],{'test_user_group_1': [513, 508], 'test_user_group_2': [514, 509]}\n",
-      "1269,test_stragety_17,2,[514 509 515 510] [2],{'test_user_group_2': [514, 509], 'test_user_group_3': [515, 510]}\n",
-      "1270,test_stragety_18,2,[516 511 515 510] [2],{'test_user_group_4': [516, 511], 'test_user_group_3': [515, 510]}\n",
-      "1271,test_stragety_19,2,[516 511 517 512] [2],{'test_user_group_4': [516, 511], 'test_user_group_5': [517, 512]}\n",
-      "1272,test_stragety_20,2,[517 512] [2],{'test_user_group_5': [517, 512]}\n"
+      "策略id，策略名称，业务id，替换后关联的告警组信息\n",
+      "1744,test_stragety_10,2,{'id': 998, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1744,test_stragety_10,2,{'id': 994, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1744,test_stragety_10,2,{'id': 989, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1745,test_stragety_11,2,{'id': 994, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1745,test_stragety_11,2,{'id': 989, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1745,test_stragety_11,2,{'id': 995, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1745,test_stragety_11,2,{'id': 990, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1746,test_stragety_12,2,{'id': 995, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1746,test_stragety_12,2,{'id': 990, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1746,test_stragety_12,2,{'id': 996, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1746,test_stragety_12,2,{'id': 991, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1747,test_stragety_13,2,{'id': 996, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1747,test_stragety_13,2,{'id': 991, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1747,test_stragety_13,2,{'id': 997, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1747,test_stragety_13,2,{'id': 992, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1748,test_stragety_14,2,{'id': 997, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1748,test_stragety_14,2,{'id': 992, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1748,test_stragety_14,2,{'id': 998, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1748,test_stragety_14,2,{'id': 993, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1749,test_stragety_15,2,{'id': 998, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1749,test_stragety_15,2,{'id': 993, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1749,test_stragety_15,2,{'id': 994, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1749,test_stragety_15,2,{'id': 989, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1750,test_stragety_16,2,{'id': 994, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1750,test_stragety_16,2,{'id': 989, 'name': 'test_user_group_1', 'bk_biz_id': 2}\n",
+      "1750,test_stragety_16,2,{'id': 995, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1750,test_stragety_16,2,{'id': 990, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1751,test_stragety_17,2,{'id': 995, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1751,test_stragety_17,2,{'id': 990, 'name': 'test_user_group_2', 'bk_biz_id': 2}\n",
+      "1751,test_stragety_17,2,{'id': 996, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1751,test_stragety_17,2,{'id': 991, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1752,test_stragety_18,2,{'id': 996, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1752,test_stragety_18,2,{'id': 991, 'name': 'test_user_group_3', 'bk_biz_id': 2}\n",
+      "1752,test_stragety_18,2,{'id': 997, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1752,test_stragety_18,2,{'id': 992, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1753,test_stragety_19,2,{'id': 997, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1753,test_stragety_19,2,{'id': 992, 'name': 'test_user_group_4', 'bk_biz_id': 2}\n",
+      "1753,test_stragety_19,2,{'id': 998, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1753,test_stragety_19,2,{'id': 993, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1754,test_stragety_20,2,{'id': 998, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n",
+      "1754,test_stragety_20,2,{'id': 993, 'name': 'test_user_group_5', 'bk_biz_id': 2}\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "show_strategy_action_config()",
+   "id": "b3a59d9a42911efe",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
